# nexus-ai-hub

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: integration.md
src/nexus_ai_hub/: __init__.py  core.py
src/nexus_ai_hub/hermes_agent/: __init__.py  agent.py
src/nexus_ai_hub/mempalace/: __init__.py  palace.py
src/nexus_ai_hub/skills/: __init__.py  registry.py
tests/: test_nexus_hub.py  test_public_api.py
tests/hermes_agent/: test_agent.py
tests/mempalace/: test_palace.py
tests/skills/: test_registry.py
